# packaging_tutorial

./: .pypirc  pyproject.toml
src/example_package_alex_carvalho_data/: example.py
src/example_package_alex_carvalho_data.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
